--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "babel-preset-es2016": "^6.24.1",
     "browser-sync": "^2.23.3",
     "browser-sync-webpack-plugin": "^1.2.0",
+    "clean-webpack-plugin": "^0.1.17",
     "css-loader": "^0.28.8",
     "extract-text-webpack-plugin": "^3.0.2",
     "node-sass": "^4.7.2",
