--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "babel-preset-env": "^1.6.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-es2016": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
     "browser-sync": "^2.23.3",
     "browser-sync-webpack-plugin": "^1.2.0",
     "clean-webpack-plugin": "^0.1.17",
@@ -25,6 +26,8 @@
   },
   "author": "Xing Li",
   "dependencies": {
-    "jquery": "^3.2.1"
+    "jquery": "^3.2.1",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0"
   }
 }
